# EPM

./: .gitignore  README.md  main.py  oc.py  pyproject.toml  test_config.toml  test_essbase.py
epm/: __init__.py  data_types.py  epm.py  essbase.py  mdx.py
test/: test_config.toml  test_essbase.py
tests/: test_essbase.py
