[project]
name = "epm"
version = "0.1.0"
description = "Oracle EPM MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.12.2",
    "openai>=1.98.0",
]

[tool.setuptools.packages.find]
include = ["epm*"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]
